[package]
name = "thang-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.23"
futures-util = "0.3.23"
log = "0.4.17"
reqwest = { version = "0.11.11", features = [ "json" ] }
serde = { version = "1.0.144", features = [ "derive" ] }
serde_json = "1.0.85"
tokio = { version = "1.20.1", features = [ "macros", "rt-multi-thread" ] }
tokio-tungstenite = "0.17.2"
twilight = "0.13.0"
twilight-gateway = "0.13.0"
twilight-http = "0.13.0"
twilight-model = "0.13.0"
twilight-validate = "0.13.0"
url = "2.2.2"
