[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.9.3"
log = "0.4.17"
tokio = { version = "1.21.2", features = [ "macros", "rt-multi-thread", "sync" ] }
twilight = "0.14.0"
twilight-gateway = "0.14.0"
twilight-http = "0.14.0"
twilight-http-ratelimiting = "0.14.0"
twilight-model = "0.14.0"
twilight-util = { version = "0.14.0", features = [ "builder" ] }
futures = "0.3.25"
serde = { version = "1.0.144", features = [ "derive" ] }
redis = { version = "0.22.1", features = ["tokio-comp"] }
thang-types = { version = "0.1.0", path = "../thang-types" }
serde_json = "1.0.87"
