[package]
name = "discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync"] }
twilight = "0.15.0"
twilight-gateway = "0.15.1"
twilight-http = "0.15.1"
twilight-http-ratelimiting = "0.15.1"
twilight-model = "0.15.1"
twilight-util = { version = "0.15.1", features = ["builder"] }
futures = "0.3.25"
serde = { version = "1.0.144", features = ["derive"] }
redis = { version = "0.25.3", features = ["tokio-comp"] }
models = { path = "../models" }
serde_json = "1.0.87"
twilight-validate = "0.15.1"
regex = "1.7.0"
lazy_static = "1.4.0"
twilight-mention = "0.15.1"
todel = "0.3.3"
serde_yaml = "0.9.21"
