[package]
name = "eludris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
eludrs = { git = "https://github.com/eludris-community/eludrs", version = "0.1.0" }
env = "0.0.0"
env_logger = "0.9.3"
futures = "0.3.25"
futures-util = "0.3.25"
log = "0.4.17"
models = { version = "0.1.0", path = "../models" }
redis = { version = "0.22.1", features = ["tokio-comp"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync"] }
twilight-model = "0.14.0"
