[package]
name = "revolt-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
optional_struct = "0.3.1"
serde_with = "2.3.1"
serde = { version = "1.0.156", features = ["derive"] }
reqwest = { version = "0.11.14", default-features = false, optional = true, features = [
    "rustls-tls",
] }
log = { version = "0.4.17", optional = true }
rmp-serde = { version = "1.1.1", optional = true }
tokio = { version = "1.26.0", optional = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-tungstenite = { version = "0.18.0", optional = true, features = [
    "rustls-tls-webpki-roots",
] }
url = { version = "2.3.1", optional = true }

[features]
default = ["logic"]
logic = [
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:log",
    "dep:url",
    "dep:reqwest",
    "dep:rmp-serde",
]
