[package]
name = "revolt-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
url = "2.3.1"
log = "0.4.17"
rmp-serde = "1.1.1"
futures = "0.3.27"
optional_struct = "0.3.1"
serde_with = "2.3.1"
serde = { version = "1.0.156", features = ["derive"] }
reqwest = { version = "0.11.14", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tokio-tungstenite = { version = "0.18.0", features = [
    "rustls-tls-webpki-roots",
] }
serde_json = "1.0.94"
models = { version = "0.1.0", path = "../models" }
