[package]
name = "revolt-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
url = "2.3.1"
log = "0.4.17"
rmp-serde = "1.1.1"
futures = "0.3.27"
serde = { version = "1.0.156", features = ["derive"] }
reqwest = { version = "0.12.4", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tokio-tungstenite = { version = "0.21.0", features = [
    "rustls-tls-webpki-roots",
] }
serde_json = "1.0.94"
models = { version = "0.1.0", path = "../models" }
optional_struct = { git = "https://github.com/insertish/OptionalStruct", rev = "ee56427cee1f007839825d93d07fffd5a5e038c7" }
redis = "0.25.3"
